Add Phase2 with Disabling and NaN Alerts

--- a/NGhtml.html
+++ b/NGhtml.html
@@ -10,7 +10,7 @@
     <h1><span id="numbertitle">Number</span> <span id="guessertitle">Guesser</span></h1>
   </header>
   <form>
-    <input type="number" id="userguess" placeholder="Enter your guess">
+    <input type="text" id="userguess" placeholder="Enter your guess">
   </form>
   <section>
       <button type="submit" id="guessbutton" class="button">Guess</button>
