Add phase two with working buttons

--- a/NGhtml.html
+++ b/NGhtml.html
@@ -10,6 +10,9 @@
     <h1><span id="numbertitle">Number</span> <span id="guessertitle">Guesser</span></h1>
   </header>
   <form>
+    <input type="text" id="usermin" placeholder="Enter min value">
+    <input type="text" id="usermax" placeholder="Enter max value">
+    <br>
     <input type="text" id="userguess" placeholder="Enter your guess">
   </form>
   <section>
