Add css tweaks and clean up sheets

--- a/NGhtml.html
+++ b/NGhtml.html
@@ -17,21 +17,19 @@
     <button type="submit" id="rangebutton" class="button">Enter Range</button>
   </form>
    <section>
-   
     <input type="text" id="userguess" placeholder="Enter your guess">
     <br>
-    <button type="submit" id="guessbutton" class="button">Guess</button>
-    <button id="clearbutton" class="button">Clear</button>
+    <button type="submit" id="guessbutton" class="button smallbutton">Guess</button>
+    <button id="clearbutton" class="button smallbutton">Clear</button>
   </section>
   <section>
     <p id="yourLastGuess"></p>
     <p id="lastGuess"></p>
     <p id="result"></p>
   </section>
-  <section>
+  <section id=resetbox>
     <button id="resetbutton" class="button">Reset</button>
   </section>
-
  <script type="text/javascript" src="NGjs.js"></script>
 </body>
 </html>
